# QQS3C

./: NOTICE  README.md  SEAL installation method.txt  test.md
communication/cpp/: Readme.txt  tcp_protocol_client.h  tcp_protocol_client_windows.h  tcp_protocol_server.h  tcp_protocol_server_windows.h  test_client  test_client_windows.cpp  test_server  test_server.cpp  test_server_windows.cpp
communication/go/: go.mod  test_cl  test_sv
communication/go/test_client/: test_client.go
communication/go/test_server/: test_server.go
communication/go/tpc/: tcp_protocol_client.go
communication/go/tps/: tcp_protocol_server.go
communication/py/: Readme.txt  pyproject.toml
go/: go.mod  tcp_protocol_client.go  test_client.go
interface/controller/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  controller.cpp  ctrl_arx_enc  ctrl_arx_enc.cpp  model_enc.h  system_enc
interface/controller/go/: ctrl_intmat_enc.go  go.mod  go.sum  model_enc.go
interface/controller/py/: controller.py  ctrl_arx.py  ctrl_arx_enc.py  ctrl_arx_q.py  ctrl_fs.py  ctrl_fs_enc.py  ctrl_fs_q.py  ctrl_intmat.py  ctrl_intmat_q.py  ctrl_obs.py  ctrl_obs_enc.py  ctrl_obs_q.py  ctrl_sf.py  model.py  model_enc.py  temp.py
interface/controller/tools/: transpose_matrix2int.m
interface/ctrl_go/: controller_enc.go  go.mod  system_enc.go
interface/ctrl_py/: system_delayed.py  system_ideal.py  system_sim.py
interface/plant_py/simulation/: plant_sim_delayed.py  plant_sim_original.py
interface/plant_py/system/: plant_quanser_delayed.py  (+1 more)
parameter/: CMakeLists.txt  stest  test.cpp
(+38 files in other folders)
